# amon-server

./: README.md  pyproject.toml
src/: app.py
src/amon_server/: __init__.py  assets.py  nav.py
src/amon_server/api/: navigation.py
src/amon_server/validation/: debug_mesh_schema.py
